syntax = "proto3";
package lavanet.lava.epochstorage;

option go_package = "github.com/lavanet/lava/x/epochstorage/types";

message EpochDetails {
  uint64 startBlock = 1; 
  uint64 earliestStart = 2; 
  repeated uint64 deletedEpochs =3;
  
}
