syntax = "proto3";
package lavanet.lava.pairing;

import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/v5/x/pairing/types";

// Params defines the parameters for the module.
message Params {
  reserved 1,2,3,4,5,6,7,9,10,11,12;
  option (gogoproto.goproto_stringer) = false;
  
  uint64 epochBlocksOverlap = 8 [(gogoproto.moretags) = "yaml:\"epoch_blocks_overlap\""];
  string QoSWeight   = 13 [
      (gogoproto.moretags) = "yaml:\"data_reliability_reward\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false
      ];
  uint64 recommendedEpochNumToCollectPayment = 14 [(gogoproto.moretags) = "yaml:\"recommended_epoch_num_to_collect_payment\""];
  int64 reputation_variance_stabilization_period = 15 [(gogoproto.moretags) = "yaml:\"reputation_variance_stabilization_period\""];
  string reputation_latency_over_sync_factor = 16 [
    (gogoproto.moretags) = "yaml:\"reputation_latency_over_sync_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  uint64 reputation_half_life_factor = 17 [(gogoproto.moretags) = "yaml:\"reputation_half_life_factor\""];
  uint64 reputation_relay_failure_cost = 18 [(gogoproto.moretags) = "yaml:\"reputation_relay_failure_cost\""];
}